- 
    Bug 
- 
    Resolution: Done
- 
    P1: Critical 
- 
    5.5.0, 5.5.1, 5.6.0 Alpha, 5.11.0
- 
    X11
- 
        e17ab5952503595e5be3be3e492a9fb829e9877b
To reproduce, run the snippet below and hold the right arrow key down. You'll get the following error message:
<Unknown File>: QML VisualDataModel: Error creating delegate
import QtQuick 2.9 import QtQuick.Window 2.2 import QtQuick.Controls 2.2 Window { width: 640 height: 480 title: qsTr("qtbug49224: currentIndex %1").arg(horizontalListView.currentIndex) visible: true ListView { id: horizontalListView anchors.fill: parent orientation: Qt.Horizontal focus: true clip: true model: 40 delegate: ListView { width: 200 height: parent.height - 50 clip: true model: 100 property int outerIndex: index delegate: Rectangle { width: parent.width height: 30 color: "#444" border.color: "white" Text { text: outerIndex + ", " + index color: "white" anchors.centerIn: parent } } } Text { text: "Scroll horizontally here" anchors.horizontalCenter: parent.horizontalCenter anchors.bottom: parent.bottom anchors.bottomMargin: 14 } } }
- duplicates
- 
                    QTBUG-61246 <Unknown File>: QML VisualDataModel: Error creating delegate -         
- Closed
 
-         
| For Gerrit Dashboard: QTBUG-49224 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 227395,6 | QQmlDelegateModel: provide better warnings | 5.11 | qt/qtdeclarative | Status: MERGED | +2 | 0 | 
| 227396,3 | QQmlDelegateModel: include QQDMIncubationTask errors with our errors | 5.11 | qt/qtdeclarative | Status: MERGED | +2 | 0 | 
| 240836,4 | QQuickItemView: Don't change the viewport while in layout | 5.12 | qt/qtdeclarative | Status: MERGED | +2 | 0 | 
| 240890,4 | QML: Demote incubation problems to info level | 5.12 | qt/qtdeclarative | Status: MERGED | +2 | 0 |