QQmlDelegateModel: provide better warnings

Currently, QQmlDelegateModel errors look like this:

    <Unknown File>: QML VisualDataModel: Error creating delegate

This patch uses the delegate as the QQmlInfo object so that we get
errors with actual file names and line numbers:

    qrc:/main.qml:19:19: QML Component: Error creating delegate

This has several benefits:

- It's obvious which file is causing the issue
- A clickable link in Creator's application output pane

Task-number: QTBUG-49224
Change-Id: I0df0d1a9e898aff5f83131ca62a47cc7f1c74c6e
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>
Reviewed-by: Michael Brasser <michael.brasser@live.com>